<resources>
    <string name="login_dialog_title">AndroidPIT Login Data</string>
    <string name="login_dialog_intro">In order to check your license, you must be logged in to the AndroidPIT App Center.</string>
    <string name="login_dialog_emailAddress">E-mail address</string>
    <string name="login_dialog_password">Password</string>
    <string name="login_dialog_remember">Remember me</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_cancel">Cancel</string>
    <string name="select_a_store">Select a store ...</string>
    <string name="unlicensed">Unlicensed</string>
    <string name="android_market">Android Market</string>
    <string name="amazon_appstore">Amazon Appstore</string>
    <string name="slideme">SlideME</string>
    <string name="androidpit">AndroidPIT</string>
    <string name="trial">Trial Version</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="_requirePasswordKey">requirePassword</string>
    <string name="_passwordKey">password</string>
    <string name="_passwordDef" />
    <string name="check_license">Checking for valid license...</string>
    <string name="valid_license">Valid license found :)</string>
    <string name="invalid_license">No license found :(</string>
    <string name="no_license">Sorry, but there was no valid license found.\n\nPlease ensure you have a data connection (WiFi, 3G, etc.) so the license server can be reached, or email \'pauldyble82@gmail.com\' for assistance.\n\nIf you\'d like to purchase a valid license, please do so by clicking one of the buttons below.</string>
    <string name="end_of_trial_license">Your trial period for this application is now over.\n\nIf you\'d like to continue using this application and purchase a valid license, please do so by clicking one of the buttons below.</string>
    <string name="error_license">Error retrieving license :|</string>
    <string name="eula">EULA</string>
    <string name="eula_text">The software is provided as is, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement. In no event shall the author be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings in the software.\n\nThe camera shutter volume is variable for covert security applications. You are advised to consider privacy issues, and you should determine the shutter volume allowing for any local regulation. If you are in a territory where existing or new regulation impose that a shutter sound must be made and cannot be muted then you must seek another version of this software or cease to use, and you should consider this before purchase.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="important_updates">Important Updates</string>
    <string name="fix_any_bugs">\n\nEnjoy, and please report any defects instead of resorting to giving an instant low rating... any bugs can be fixed!!</string>
    <string name="help">Help</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="upgrade">Upgrade</string>
    <string name="more_apps">More Apps</string>
    <string name="error">ERROR</string>
    <string name="external_not_found">External storage (SD Card) not found!</string>
    <string name="could_not_complete_multiple_files">Could not complete action on multiple files!</string>
    <string name="could_not_upload_file">Could not upload file!</string>
    <string name="create_directory_failed">Create directory failed!</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="directory_could_not_be_created">Directory could not be created!</string>
    <string name="no_name_found_create_directory">No name found!</string>
    <string name="no_parameters_found_create_directory">No parameters found!</string>
    <string name="cannot_find_file_or_directory">Cannot find file or directory!</string>
    <string name="directory_could_not_be_deleted">Directory could not be deleted!</string>
    <string name="directory_could_not_be_zipped">Directory could not be zipped!</string>
    <string name="could_not_find_zip_file">Could not find zip file!</string>
    <string name="directory_could_not_be_zipped_download">Directory could not be zipped and downloaded!</string>
    <string name="directory_could_not_be_dispalyed">Directory could not be displayed!</string>
    <string name="file_could_not_be_deleted">File could not be deleted!</string>
    <string name="file_could_not_be_copied">File could not be copied!</string>
    <string name="file_could_not_be_unzipped">File could not be unzipped!</string>
    <string name="not_enough_space">Not enough space left on external storage (SD Card)!</string>
    <string name="filename_not_valied">Filename not valid!</string>
    <string name="back_to_files">Back To Files</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="date_modified">Date Modified</string>
    <string name="actions">Actions</string>
    <string name="parent_driectory">Up To Parent Directory</string>
    <string name="delete">Delete</string>
    <string name="create_copy">Create Copy</string>
    <string name="rename">Rename</string>
    <string name="unzip">Unzip</string>
    <string name="zip">Zip</string>
    <string name="download_zip">Download</string>
    <string name="install">Install</string>
    <string name="objects">Objects</string>
    <string name="files">Files</string>
    <string name="directories">Directories</string>
    <string name="stats_and_actions">Statistics and Actions</string>
    <string name="current_directory">Current Directory:</string>
    <string name="space">Available/Total Space:</string>
    <string name="actions_2">Actions:</string>
    <string name="download_selected">Download Selected</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="zip_selected">Zip Selected</string>
    <string name="create_directory">Create Directory</string>
    <string name="stream_media">Streaming Media Playlist</string>
    <string name="upload_a_file">Upload Files To This Directory</string>
    <string name="file">File:</string>
    <string name="upload">Upload Files</string>
    <string name="overwrite">Overwrite</string>
    <string name="to_bulk_upload_1">To \'bulk upload\' or to upload a directory, zip the files and/or directories on your computer and then upload the resultant zip file.</string>
    <string name="to_bulk_upload_2">Once the zip file has uploaded, click \'Unzip\' in the Actions column.</string>
    <string name="sure_delete">Are you sure you want to delete? This cannot be undone!</string>
    <string name="sure_unzip">Unzipped files will overwrite existing files with same name. Do you want to continue?</string>
    <string name="enter_directory_name">Please enter the new directory name:</string>
    <string name="new_folder">New Folder</string>
    <string name="enter_password">Please enter your password:</string>
    <string name="login">Login</string>
    <string name="password_incorect">Password was entered incorrectly!</string>
    <string name="could_not_start_activity_for_intent">Could not start activity for intent!</string>
    <string name="_phonecamOrWebcamKey">phonecamOrWebcam</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="more">More</string>
    <string name="securet_apps">SECuRET</string>
    <string name="securet_apps_sub">Try more great SECuRET camera applications for Android...</string>
    <string name="contact">Contact Developer</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="blog">Blog</string>
    <string name="upgrade_sub">Full version</string>
    <string name="email_sub">pauldyble82@gmail.com</string>
    <string name="facebook_sub">Search for \'SECuRET (for Android)\'</string>
    <string name="twitter_sub">Follow @dooblou</string>
    <string name="blog_sub">http://dooblou.blogspot.com</string>
    <string name="attention">Attention!</string>
    <string name="attention_sub">Click here for important information...</string>
    <string name="customisation">Customization</string>
    <string name="other">Other</string>
    <string name="_settingsKey">settings</string>
    <string name="_categoriesKey">categories</string>
    <string name="_moreKey">more</string>
    <string name="_securetKey">securet</string>
    <string name="_upgradeKey">upgrade</string>
    <string name="_contactKey">contact</string>
    <string name="_emailKey">email</string>
    <string name="_facebookKey">facebook</string>
    <string name="_twitterKey">twitter</string>
    <string name="_blogKey">blog</string>
    <string name="advanced_settings">Advanced</string>
    <string name="advanced_settings_sub">Specialized configuration</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="defaults_restored">Defaults restored</string>
    <string name="motion_detection">Motion Detection</string>
    <string name="processing_scale">Processing Scale</string>
    <string name="motion_detections_for_trigger">Detections For Trigger</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="performance">Performance</string>
    <string name="restart_capture_interval">Restart Capture Interval</string>
    <string name="gaussian">Gaussian</string>
    <string name="capture_save_folder">Capture Save Folder</string>
    <string name="quick_start">Quick Start Mode</string>
    <string name="quick_start_sub">Long-click Start for instant motion detection &amp; screen dimming.</string>
    <string name="restart_capture_interval_after_video_recording">After Video Recording</string>
    <string name="restart_capture_interval_after_burst_captures">After Burst Capturing</string>
    <string name="show_warning_on_start">Show Warning</string>
    <string name="show_warning_on_start_sub">When Start pressed</string>
    <string name="camera_effect">Camera Effect</string>
    <string name="overlay_effect">Overlay Effect</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="webcam">Webcam</string>
    <string name="phonecam">Built-in Camera</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="colour_adj">Colour</string>
    <string name="primary_adj">Primary</string>
    <string name="outline_adj">Outline</string>
    <string name="default_string">Default</string>
    <string name="start_phonecam_text">Ready to hide your device perfectly still? Capture images using the built-in camera!</string>
    <string name="start_webcam_text">Got a webcam and don\'t want to use your built-in camera? Capture images using a webcam feed!</string>
    <string name="wifi_enabled">WiFi Enabled</string>
    <string name="wifi_connected">WiFi Connected</string>
    <string name="ssid">Network</string>
    <string name="ip">IP Address</string>
    <string name="port">Ports</string>
    <string name="send_sms">Press start and send an SMS to this phone, using the following formats:</string>
    <string name="for_photos">For photos...</string>
    <string name="for_videos">For videos...</string>
    <string name="sms_format">Format</string>
    <string name="sms_example">Example</string>
    <string name="start_beta_text">DEMO VERSION</string>
    <string name="start_beta_sub_text">[ Time-Limited | Black &amp; White | Low Res ]</string>
</resources>