<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/groovy_settings_sv_main" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:gravity="top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <LinearLayout android:gravity="top|center" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_overlay_effect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/overlay_effect" />
                <Spinner android:id="@id/groovy_settings_sp_overlay_effect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_brightness" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/brightness" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_brightness" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="200" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_saturation" android:paddingTop="@dimen/large_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/saturation" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_saturation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="200" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_primary_adj" android:paddingTop="@dimen/large_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/primary_adj" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_primary_adj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" />
            </LinearLayout>
            <LinearLayout android:gravity="top|center" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_camera_effect" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/camera_effect" />
                <Spinner android:id="@id/groovy_settings_sp_camera_effect" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_contrast" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contrast" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_contrast" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="200" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_colour_adj" android:paddingTop="@dimen/large_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/colour_adj" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_colour_adj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" />
                <TextView android:textSize="@dimen/small_text" android:textColor="@color/white" android:id="@id/groovy_settings_tv_outline_adj" android:paddingTop="@dimen/large_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/outline_adj" />
                <com.dooblou.View.SeekBarWithValue android:id="@id/groovy_settings_sb_outline_adj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/View02" android:background="@drawable/divider_gradient" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/footer_gradient" android:padding="@dimen/small_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/groovy_settings_bt_default" android:background="@drawable/custom_button" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:text="@string/default_string" android:layout_weight="1.0" />
        <View android:id="@id/groovy_settings_vi_button_divider" android:layout_width="@dimen/header_padding" android:layout_height="@dimen/header_padding" />
        <Button android:id="@id/groovy_settings_bt_done" android:background="@drawable/custom_button" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:text="@string/done" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:id="@id/View02" android:background="@drawable/divider_gradient" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" />
</LinearLayout>